fix: double overflow and skeleton height issues on hourly section

--- a/src/App.css
+++ b/src/App.css
@@ -274,7 +274,7 @@
   }
 
   .skeleton-hourly-card {
-    @apply animate-pulse h-16.5 bg-neutral-700 flex items-center justify-between rounded-lg py-1 border border-neutral-600;
+    @apply animate-pulse h-16.5 bg-neutral-700 flex items-center justify-between rounded-lg py-8 border border-neutral-600;
   }
 
 
@@ -405,7 +405,7 @@
       @apply w-full xl:w-[30%] h-full pb-20 xl:pb-0;
 
       & .location-hourly-forecast {
-        @apply p-3.5 xl:p-6 h-full overflow-y-auto;  
+        @apply p-3.5 xl:p-6 h-full;  
 
         & .weekday-hourly-forecast {
           @apply flex items-center justify-between;
@@ -432,7 +432,7 @@
         }
 
         & .hourly-weather-forecast {
-          @apply flex flex-col gap-y-4.5 mt-5 overflow-y-scroll h-full;
+          @apply flex flex-col gap-y-4.5 mt-5 overflow-y-scroll h-[90%];
 
           & .weather-hour-card {
             @apply bg-neutral-700 flex items-center justify-between rounded-lg py-1 pr-4 pl-1 border border-neutral-600;
